# next-clerk-rust-axum-auth-lab

./: .gitignore  README.md
ai-knowledge-map/: 01-architecture-overview.md  02-authentication-flow.md  03-security-checklist.md  README.md
api/: .env.example  Cargo.toml
api/src/: auth.rs  error.rs  main.rs
backend/: .env.example  Cargo.toml
backend/src/: main.rs
docs/: ai-knowledge-map.md  architecture-diagrams.md  architecture.md  authentication-flow.md  backend-bearer-token.md  production-hardening.md
docs/ai-knowledge-map/: README.md  entry-points.md  extension-recipes.md  gotchas.md  related-docs.md  scope.md  shared-config.md
frontend/: package-lock.json  package.json
frontend/app/: auth-lab.tsx  layout.tsx  page.module.css  page.tsx
web/: package-lock.json  package.json  proxy.ts
web/app/: layout.tsx  page.tsx
web/app/protected/: page.tsx
web/app/sign-in/[[...sign-in]]/: page.tsx
web/app/sign-up/[[...sign-up]]/: page.tsx
